# stegshield

./: .gitignore  PROJECT_PLAN.md  README.md  pyproject.toml  requirements-ml-cpu.txt
.github/workflows/: ci.yml
docs/: THESIS_DOCUMENTATION.md  payload_head_experiments.md  robustness_deployment.md
scripts/: build_thesis.py
src/stegshield/: __init__.py  analysis.py  cli.py  doctor.py  evaluate_cnn.py  evaluate_fusion.py  experiment_summary.py  fusion.py  labels.py  ml_metrics.py  payload_eval.py  plots.py  predict_cnn.py  processing.py  robustness.py  router.py  train_cnn.py
src/stegshield/data/: kaggle_stegoimages.py  splits.py  synth_lsb.py  torch_dataset.py
src/stegshield/metadata/: __init__.py  extract.py  lsb_payload.py  risk_rules.py
src/stegshield/models/: cnn.py
src/stegshield/utils/: __init__.py  file_validation.py  hashing.py
tests/: test_cli.py  test_dataset_splits.py  test_evaluate_cnn.py  test_evaluate_fusion.py  test_experiment_summary.py  test_file_validation.py  test_fusion.py  test_metadata_rules.py  test_ml_metrics.py  test_model.py  test_payload_eval.py  test_payload_fusion.py  test_payload_head.py  test_plots.py  test_processing.py  test_robustness.py  test_router.py  test_synth_lsb.py
