[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stegshield"
version = "0.1.0"
description = "Hybrid CNN and metadata-based image risk detection for a bachelor thesis."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Andrei" }
]
dependencies = [
  "pillow>=10.0.0",
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "scikit-learn>=1.3.0",
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "typer>=0.12.0",
  "rich>=13.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.4.0"
]
api = [
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
  "python-multipart>=0.0.9"
]

[project.scripts]
stegshield = "stegshield.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
